image plugin setup

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-navigation": "^0.3.5"
+  },
+  "dependencies": {
+    "@11ty/eleventy-img": "^2.0.1"
   }
 }
